--- a/scene.html
+++ b/scene.html
@@ -6,7 +6,28 @@
 </head> 
 <body> 
     <div id="scene">
+        <div id="balloon">
 
+        </div>
+        <div id="flowers">
+
+        </div>
+        <div id="heart-cloud">
+
+        </div>
+        <div id="park">
+
+        </div>
+        <div id="picnic">
+
+        </div>
+        <div id="proposal">
+
+        </div>
+        <div id="squirrels">
+            
+        </div>
     </div>
+
 </body> 
 </html>
