--- a/scene.html
+++ b/scene.html
@@ -7,25 +7,23 @@
 <body> 
     <div id="scene">
         <div id="balloon">
-
+            <img src="./images/balloon.gif">
         </div>
         <div id="flowers">
-
+            <img src="./images/flowers.png">
         </div>
         <div id="heart-cloud">
-
+            <img src="./images/heart-cloud.png">
         </div>
-        <div id="park">
 
-        </div>
         <div id="picnic">
-
+            <img src="./images/picnic.png">
         </div>
         <div id="proposal">
-
+            <img src="./images/proposal.png">
         </div>
         <div id="squirrels">
-            
+            <img src="./images/squirrels.png">
         </div>        
     </div>
 
