Change proposal image

--- a/scene.html
+++ b/scene.html
@@ -20,7 +20,7 @@
             <img src="./images/picnic.png">
         </div>
         <div id="proposal">
-            <img src="./images/proposal.png">
+            <img src="./images/proposal.webp">
         </div>
         <div id="squirrels">
             <img src="./images/squirrels.png">
