--- a/scene.html
+++ b/scene.html
@@ -1,3 +1,5 @@
+</body> 
+</html>
 <!DOCTYPE html>
 <html> 
 <head> 
@@ -20,7 +22,9 @@
             <img src="./images/picnic.png">
         </div>
         <div id="proposal">
-            <img src="./images/proposal.webp">
+            <a href="https://www.kay.com/">
+                <img src="./images/proposal.webp">
+            </a>
         </div>
         <div id="squirrels">
             <img src="./images/squirrels.png">
