Add audio and color filter

--- a/scene.html
+++ b/scene.html
@@ -26,6 +26,7 @@
             <img src="./images/squirrels.png">
         </div>        
     </div>
-
+    <div id="overlay"></div>
+    <audio src="./images/_Love_ - Emotional Rap Beat _ New R&B Hip Hop Instrumental Music 2019 _ Opium Lights #Instrumentals [ ezmp3.cc ].mp3" style="display:none;" autoplay="true"></audio>
 </body> 
 </html>
